# imc-prosperity-4

./: README.md  pyproject.toml
prosperity4/round0/: ROUND0_Analysis.ipynb  ROUND0_Trader.py  __init__.py
prosperity4/round0/notebooks/: analysis.ipynb
prosperity4/round1/: ROUND1_Trader.py  ROUND1_Trader_Osmium.py  ROUND1_Trader_Root.py
prosperity4/round1/manual/: manual.ipynb
prosperity4/round1/notebook/: ROUND1_Analysis_Root.ipynb
prosperity4/round1/notebooks/: analysis_osmium.ipynb  analysis_root.ipynb
prosperity4/round2/: ROUND2_Trader.py  ROUND2_Trader_Osmium.py  ROUND2_Trader_Root.py  ROUND2_Trader_Root_Final.py  ROUND2_Trader_Root_OnlyAggressiveBuy.py
prosperity4/round2/logs/: 327628.log.txt
prosperity4/round2/manual/: analysis.ipynb  optimizer.html
prosperity4/round2/notebooks/: analysis_osmium.ipynb  analysis_root.ipynb
prosperity4/round3/: Leo_vev_4000_1st_try.py  ROUND3_HYDROGEL_TRADER.py  ROUND3_ToniWIP_HydroOK.py  ROUND3_Trader.py  ROUND3_VELVETFRUIT_TRADER.py  Trader.py
prosperity4/round3/logs/: 412570.log.txt  439312.log.txt  441230.log.txt  441893.log.txt
prosperity4/round3/notebooks/: analysis_hydrogel_pack.ipynb  analysis_velvet_fruit.ipynb  analysis_velvet_options.ipynb  michele_things0.py
prosperity4/round4/: Leo_does_things.py  Michele_does_things.py  ROUND4_Final.py  ROUND4_Starter.py  ROUND4_Starter_HYDROMM1.py  ROUND4_Starter_HYDROMR.py
prosperity4/round5/: ROUND5_Final.py  ROUND5_Starter.py  ROUND5_final_final.py
prosperity4/utils/: LogAnalyzer.ipynb  blacksholes.py  dataloader.py  statistics_utils.py  template.py
(+23 files in other folders)
