[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imc-prosperity-4"
version = "0.1.0"
description = "Prosperity 4 trading challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jsonpickle>=4.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "typing>=3.10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["prosperity4"]

[tool.uv]
package = true
